--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
 
     <link rel="stylesheet" href="css/style.min.css">
 </head>
-
 <body>
     @@include("components/_header.html")
+    @@include("components/_hero.html")
 
     @@include("pages/page-template.html")
 
